updated "+ Create resource" and "All servces"
killed a bunch of typos (mostly stray characters in bolding), added
spacing for Pandoc to render code blocks correctly. Please check Lab AK
10, Exercise 2, Task 1. The two PowerShell lines on one step would not
rener correctly in Pandoc, so I split the steps so that only one PS
command per step.

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -72,7 +72,7 @@
 
 #### Task 2: Create Azure resources
 
-1. In the Azure portal, click **New**, click **Networking**, and then click **Route table**.
+1. In the Azure portal, click **+ Create resource**, click **Networking**, and then click **Route table**.
 
 2. On the **Route table** blade, specify the following settings and click **Create**:
 
@@ -97,9 +97,9 @@
 
 5. On the **20533D0101-rt** blade, click **Tags**. 
 
-6. On the ****20533D0101-rt - Tags** blade, in the **Name** text box, select **project** from the drop-down list, and then in the **Value** drop-down list, select **test**. Click **Save**.
+6. On the **20533D0101-rt - Tags** blade, in the **Name** text box, select **project** from the drop-down list, and then in the **Value** drop-down list, select **test**. Click **Save**.
 
-7. In the hub menu, click **More services** and, in the service menu, click **Tags**
+7. In the hub menu, click **All services** and, in the service menu, click **Tags**
 
 8. On the **Tags** blade, click **project : test**. This will display the **project : test** blade showing both the resource group and the route table resource you created.
 
@@ -134,6 +134,7 @@
 1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Add-AzureRmAccount
   ```
@@ -141,11 +142,13 @@
 3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 4. In the Windows PowerShell ISE window, in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Get-AzureRmSubscription
   ```
 
 5. In the Windows PowerShell ISE window, in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Get-AzureRmResourceProvider
   ```
@@ -154,11 +157,12 @@
 
 #### Task 2: Manage Azure resources and resource groups by using Azure PowerShell
 
-1. In the Windows PowerShell ISE window, open the E:\\Labfiles\\Lab01\\Starter\\Set-20533D0101Lab.ps1 file.
+1. In the Windows PowerShell ISE window, open the **E:\\Labfiles\\Lab01\\Starter\\Set-20533D0101Lab.ps1** file.
 
 2. In the **# Variables** section, note the values of predefined variables. They need to match the names of resource and the resource group you created in the previous exercise.
 
 3. Under the line that states **# Identify the location of the resource group containing the resource**, type the following:
+
   ```
   $locName = (Get-AzureRmResourceGroup -Name $rg1Name).Location
   ```
@@ -166,6 +170,7 @@
 4. Select all of code in the file, including the line you just typed, right-click it, and then click **Run selection**.
 
 5. Under the line that states **# Create a new resource group in the same location**, type the following:
+
   ```
   $rg2 = New-AzureRmResourceGroup -Name $rg2Name -Location $locName
   ```
@@ -173,6 +178,7 @@
 6. Select the line you just typed, right-click it, and then click **Run selection**.
 
 7. Under the line that states **# Retrieve an object representing the resource and store it in a variable**, type the following:
+
   ```
   $res = Get-AzureRmResource -ResourceName $resName -ResourceGroupName $rg1Name
   ```
@@ -180,6 +186,7 @@
 8. Select the line you just typed, right-click it, and then click **Run selection**.
 
 9. Under the line that states **# Move the resource to the new resource group**, type the following:
+
   ```
   Move-AzureRmResource -DestinationResourceGroupName $rg2Name -ResourceId $res.ResourceId
   ```
@@ -187,6 +194,7 @@
 10. Select the line you just typed, right-click it, and then click **Run selection**. When prompted to confirm, click **Yes**. Wait until the move operation completes.
 
 11. Under the line that states **# View resources in the new resource group**, type the following:
+
   ```
   Get-AzureRmResource | Where-Object ResourceGroupName -eq $rg2Name
   ```
@@ -202,6 +210,7 @@
 1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows System** folder, right-click **Command Prompt**, click **More**, and click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az login
   ```
@@ -215,6 +224,7 @@
 6. Note the message stating that you have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device. Close the Microsoft Edge window.
 
 7. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az account show
   ```
@@ -222,6 +232,7 @@
 8. Take note of the value of the **id** parameter, representing your Azure subscription ID. You will need it in the next task.
 
 9. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az provider list
   ```
@@ -231,18 +242,21 @@
 #### Task 2: Manage Azure resources and resource groups by using Azure CLI
 
 1. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az group show --name 20533D0101-LabRG
   ```
 
 2. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az resource list --resource-group 20533D0102-LabRG
   ```
 
 3. In the output of the previous command, at **Administrator: Command Prompt**, note the value of the **id** property of the **20533D0101-rt**. You will use this value in the next command.
 
-4. From **Administrator: Command Prompt**, type the following command (replace `guid` with ID of your Azure subscrption) and then press Enter:
+4. From **Administrator: Command Prompt**, type the following command (replace **`guid`** with ID of your Azure subscrption) and then press Enter:
+
   ```
   az resource move --ids "/subscriptions/{guid}/resourceGroups/20533D0102-LabRG/providers/Microsoft.Network/routeTables/20533D0101-rt" --destination-group "20533D0101-LabRG"
   ```
@@ -250,6 +264,7 @@
 5. Wait for the operation to complete.
 
 6. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az resource list --resource-group 20533D0101-LabRG
   ```
@@ -263,6 +278,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
