--- a/Instructions/20533D_LAB_AK_02.md
+++ b/Instructions/20533D_LAB_AK_02.md
@@ -7,7 +7,7 @@
 
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. 
 
-2. Start Microsoft Edge and browse to the **Virtual Network with two Subnets** Github-hosted Azure quickstart template at http://aka.ms/Mt32e4. 
+2. Start Microsoft Edge and browse to the **Virtual Network with two Subnets** Github-hosted Azure quickstart template at [**http://aka.ms/Mt32e4**](http://aka.ms/Mt32e4). 
   
 3. In Microsoft Edge, on the **Virtual Network with two Subnets** page, click **Deploy to Azure**.
 
@@ -15,25 +15,24 @@
 
 5. In the Azure portal, on the **Create a Virtual Network with two Subnets** blade, click **Edit template**.
 
-6. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters: _vnetName_,  _vnetAddressPrefix_, _subnet1Prefix_, _subnet1Name_, _subnet2Prefix_, and _subnet2Name_.
+6. Review the structure of the JavaScript Object Notation (JSON) file. Examine the placeholders for values that can be edited during the deployment. This template contains the following parameters: **_vnetName_**,  **_vnetAddressPrefix_**, **_subnet1Prefix_**, **_subnet1Name_**, **_subnet2Prefix_**, and **_subnet2Name_**.
 
 7. Review the content of the **Resources** section to identify type of the resource, its name, and properties.
 
 8. Click **Discard** to close the Edit Template blade.
 
-> **Note:** If the template fails to load into the Azure portal, navigate to the following URL:
-        [http://aka.ms/Fpqovq](http://aka.ms/Fpqovq) . Then, select and copy all text on the page. Paste the copied text into the **Edit template** blade, then perform steps 4 and 5 to review the template and close the Edit Template blade without making any changes.
+> **Note:** If the template fails to load into the Azure portal, navigate to the following URL: [**http://aka.ms/Fpqovq**](http://aka.ms/Fpqovq). Then, select and copy all text on the page. Paste the copied text into the **Edit template** blade, then perform steps 4 and 5 to review the template and close the Edit Template blade without making any changes.
 
 
 #### Task 2: Perform the deployment from the Azure portal
   
 1. On the **Create a Virtual Network with two Subnets** blade, specify the following settings and then click **Purchase**.
 
-  - Subscription: select the name of your subscription in the drop down list
+  - Subscription: _select the name of your subscription in the drop down list_
 
   - Resource group: ensure that **Create new** option is selected and type **20533D0203-LabRG** in the text box below
 
-  - Location: in the drop-down list, select an Azure region close to the location of the lab environment
+  - Location: _in the drop-down list, select an Azure region close to the location of the lab environment_
 
   - Vnet Name: **20533D0203-vnet**
 
@@ -47,7 +46,7 @@
 
   - Subnet2Name: **Subnet2**
 
-  - I agree to the terms and conditions stated above: enabled
+  - I agree to the terms and conditions stated above: **enabled**
 
 2. Verify that provisioning of the new virtual network with name **20533D0203-vnet** completed successfully.
 
@@ -62,38 +61,45 @@
 1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Add-AzureRmAccount
   ```
 
 3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   Get-AzureRmSubscription
   ```
 
-5. Note the value of the `Id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+5. Note the value of the **`Id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
+
   ```
   Set-AzureRmContext -SubscriptionId 'SubscriptionId'
   ```
 
-6. To create a new resource group, type the following command, and then press Enter (replace `AzureRegion` with the name of the same Azure region you chose in the previous exercise):
+6. To create a new resource group, type the following command, and then press Enter (replace **`AzureRegion`** with the name of the same Azure region you chose in the previous exercise):
+
   ```
   $rg = New-AzureRMResourceGroup -Name '20533D0204-LabRG' -Location 'AzureRegion'
   ```
 
-7. To create a new virtual network named **20533D0204-vnet** with the address space **10.11.0.0/16** and store a reference to it in the `$vnet` variable, type the following command, and then press Enter:
+7. To create a new virtual network named **20533D0204-vnet** with the address space **10.11.0.0/16** and store a reference to it in the **`$vnet`** variable, type the following command, and then press Enter:
+
   ```
   $vnet = New-AzureRmVirtualNetwork -ResourceGroupName $rg.ResourceGroupName -Name '20533D0204-vnet' -AddressPrefix '10.11.0.0/16' -Location $rg.Location
   ```
 
-8. To add a subnet to the new virtual network, type the following command, and then press Enter: 
+8. To add a subnet to the new virtual network, type the following command, and then press Enter:
+
   ```
   Add-AzureRmVirtualNetworkSubnetConfig -Name 'Subnet1' -VirtualNetwork $vnet -AddressPrefix '10.11.0.0/24'
   ```
 
 9. To update the configuration in the virtual network, type the following command, and then press Enter:
+
   ```
   Set-AzureRmVirtualNetwork -VirtualNetwork $vnet
   ```
@@ -108,11 +114,12 @@
 1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows System** folder, right-click **Command Prompt**, click **More**, and click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az login
   ```
 
-3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenicate. Start Microsoft Edge and browse to https://aka.ms/devicelogin. 
+3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenicate. Start Microsoft Edge and browse to [**https://aka.ms/devicelogin**](https://aka.ms/devicelogin). 
 
 4. On the **Device Login** page, type the code included in the message. This will identify Microsoft Azure Cross-platform Command Line Interface as the application publisher. Click **Continue**. 
 
@@ -120,27 +127,32 @@
 
 6. Note the message stating that you have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device. Close the Microsoft Edge window.
 
-7. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+7. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   az account show
   ```
 
-8. Note the value of the '_id_' property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+8. Note the value of the '**_id_**' property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
+
   ```
   az account set --subscription "SubscriptionId"
   ```
 
-9. To create a new resource group, type the following command, and then press Enter (replace `AzureRegion` with the name of the same Azure region you chose in the previous exercise):
+9. To create a new resource group, type the following command, and then press Enter (replace **`AzureRegion`** with the name of the same Azure region you chose in the previous exercise):
+
   ```
   az group create --name 20533D0205-LabRG --location "AzureRegion"
   ```
 
-10. To create a new virtual network named **20533D0205-vnet** with the address space **10.12.0.0/16** and a subnet named Subnet1 with the address prefix of 10.12.0.0/24, type the following command, and then press Enter (replace `AzureRegion` with the name of the same Azure region you chose in the previous exercise):
+10. To create a new virtual network named **20533D0205-vnet** with the address space **10.12.0.0/16** and a subnet named Subnet1 with the address prefix of 10.12.0.0/24, type the following command, and then press Enter (replace **`AzureRegion`** with the name of the same Azure region you chose in the previous exercise):
+
   ```
   az network vnet create --name 20533D0205-vnet --resource-group 20533D0205-LabRG --location "AzureRegion" --address-prefix 10.12.0.0/16 --subnet-name Subnet1 --subnet-prefix 10.12.0.0/24
   ```
 
-11. To add a subnet to the new virtual network, type the following command, and then press Enter: 
+11. To add a subnet to the new virtual network, type the following command, and then press Enter:
+
   ```
   az network vnet subnet create --address-prefix 10.12.1.0/24 --name Subnet2 --resource-group 20533D0205-LabRG --vnet-name 20533D0205-vnet 
   ```
@@ -155,9 +167,9 @@
   
 #### Task 1: Configure VNet peering for the first virtual network
   
-1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd** and that the **Add-20533DEnvironment** script successfully completed. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd** and that the **Add-20533DEnvironment** script successfully completed. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-2. In Microsoft Edge, in the Azure portal, click **More services** and, in the service menu, click **Virtual networks**.
+2. In Microsoft Edge, in the Azure portal, click **All services** and, in the service menu, click **Virtual networks**.
 
 3. On the **Virtual networks** blade, click **20533D0201-vnet**.
 
@@ -216,7 +228,7 @@
   
 #### Task 1: Configure IP forwarding 
   
-1. In Microsoft Edge, in the Azure portal, click **More services** and, in the service menu, click **Virtual machines**.
+1. In Microsoft Edge, in the Azure portal, click **All services** and, in the service menu, click **Virtual machines**.
 
 2. On the **Virtual machines** blade, click **20533D0201-vm1**.
 
@@ -233,7 +245,7 @@
 
 #### Task 2: Configure user defined routing 
   
-1. In Microsoft Edge, in the Azure portal, click **New**. 
+1. In Microsoft Edge, in the Azure portal, click **+ Create resource**. 
 
 2. On the **New** blade, click **Networking** and then, click **Route table**
 
@@ -247,7 +259,7 @@
 
   - Location: the same Azure region in which you created the virtual network 20533D0202-vnet
 
-4. Wait until the route table is provisioned. Next, in the Azure portal, in the hub menu, click **More services** and, in the service menu, click **Route tables**.
+4. Wait until the route table is provisioned. Next, in the Azure portal, in the hub menu, click **All services** and, in the service menu, click **Route tables**.
 
 5. On the **Route tables** blade, click **20533D02-rt1**.
 
@@ -280,7 +292,7 @@
 
 #### Task 3: Configure routing on an Azure VM running Windows Server 2016
   
-1. On MIA-CL1, in Microsoft Edge, in the Azure portal, in the hub menu, click **More services** and, in the list of services, click **Virtual machines**.
+1. On MIA-CL1, in Microsoft Edge, in the Azure portal, in the hub menu, click **All services** and, in the list of services, click **Virtual machines**.
 
 2. On the **Virtual machines** blade, click ellipsis to the right of the **20533D0201-vm1** entry and click **Connect**.
 
@@ -393,9 +405,11 @@
 7. Once you are connected to 20533D0201-vm1 via the Remote Desktop session, click **Start** and click **Windows PowerShell**.
 
 8. In the **Windows PowerShell** window, type the following cmdlet and then press Enter:
+
   ```
   Test-NetConnection -ComputerName 10.0.1.4 -TraceRoute
   ```
+
 9. Verify that test is successful and note that the connection was routed over 10.0.0.4
 
 
@@ -406,6 +420,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -418,7 +433,7 @@
 
 7. If prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
