--- a/Instructions/20533D_LAB_AK_04.md
+++ b/Instructions/20533D_LAB_AK_04.md
@@ -7,7 +7,7 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. 
 
-2. Start Microsoft Edge, browse to https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. Start Microsoft Edge, browse to [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 3. In the Azure portal, in the hub menu, click **Resource groups**.
 
@@ -24,7 +24,7 @@
 
 #### Task 2: Implement an Azure Load Balancer
   
-1. On MIA-CL1, in the Azure portal, in the hub menu, click **New**, click **Networking**, and then click **Load Balancer**.
+1. On MIA-CL1, in the Azure portal, in the hub menu, click **+ Create resource**, click **Networking**, and then click **Load Balancer**.
 
 2. On the **Create load balancer** blade, specify the following settings:
 
@@ -32,7 +32,7 @@
 
   - Type: **Public**
 
-  - Public IP address: click **Choose a public IP address**, on the Choose public IP address blade, click **Create new**, on the **Create public IP address blade, in the **Name** text box type **20533D0401-ilbfe**, ensure that the **Dynamic** option is selected, and click **OK**.
+  - Public IP address: click **Choose a public IP address**, on the Choose public IP address blade, click **Create new**, on the **Create public IP address** blade, in the **Name** text box type **20533D0401-ilbfe**, ensure that the **Dynamic** option is selected, and click **OK**.
 
   - Subscription: the name of your Azure subscription
 
@@ -42,7 +42,7 @@
 
 3. Click **Create**. Wait for the deployment to complete.
 
-4. In the hub menu, click **More services**, in the service menu, click **Load Balancers**, and then on the Load balancers blade, click **20533D0401-ilb**.
+4. In the hub menu, click **All services**, in the service menu, click **Load Balancers**, and then on the Load balancers blade, click **20533D0401-ilb**.
 
 5. On the 20533D0401-ilb blade, click **Backend pools**, and then click **Add**.
 
@@ -172,7 +172,7 @@
 
 3. Review the content of the file. Note that this is a DSC configuration that controls the installation of the Windows Server Web-Server role. 
 
-4. In the Windows PowerShell ISE window, open the E:\\Labfiles\\Lab04\\Starter\\Deploy-20533D0401DSC.ps1 file.
+4. In the Windows PowerShell ISE window, open the **E:\\Labfiles\\Lab04\\Starter\\Deploy-20533D0401DSC.ps1** file.
 
 5. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first retrieves the storage account from the resource group, and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed by the provisioning script by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
@@ -196,9 +196,9 @@
 
 13. If prompted in the Remote Desktop session whether to allow your PC to be discoverable, click **No**.
 
-14. After you establish a Remote Desktop session to the VM, wait for the Server Manager window to open. In the Server Manager window, verify that IIS appears in the left pane, indicating that the Web Server (IIS) server role is installed.
+14. After you establish a Remote Desktop session to the VM, wait for the Server Manager window to open. In the Server Manager window, verify that **IIS** appears in the left pane, indicating that the Web Server (IIS) server role is installed.
 
-15. Repeat steps 9 through 14 for the other virtual machine 20533D0401-vm1.
+15. Repeat steps 9 through 14 for the other virtual machine **20533D0401-vm1**.
 
 16. After completing the tasks, switch back to your lab computer MIA-CL1. Leave both Remote Desktop sessions open.
 
@@ -220,7 +220,7 @@
 
   - Source: **Any**
 
-  - Source port ranges: **\***
+  - Source port ranges: **\\**
 
   - Destination: **Any**
 
@@ -340,7 +340,7 @@
 
 9. In the navigation pane on the left side, click **Storage Pools**.
 
-10. In the **STORAGE POOLS pane, click the **TASKS** menu, and then click **New Storage Pool** on the drop-down menu. This will open the New Storage Pool Wizard.
+10. In the **STORAGE POOLS** pane, click the **TASKS** menu, and then click **New Storage Pool** on the drop-down menu. This will open the New Storage Pool Wizard.
 
 11. On the **Before you begin** page, click **Next**.
 
@@ -384,7 +384,7 @@
 
 31. On the **Completion** page, click **Close**.
 
-32. From the desktop of 20533D0401-vm2, open File Explorer, and then verify that there is a new drive F available for use.
+32. From the desktop of 20533D0401-vm2, open File Explorer, and then verify that there is a new drive **F:** available for use.
 
 33. Close the Remote Desktop session to 20533D0401-vm2.
 
@@ -397,6 +397,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -409,7 +410,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
