--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -7,9 +7,9 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Open Microsoft Edge, browse to the Azure portal at http://portal.azure.com, and then sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. Open Microsoft Edge, browse to the Azure portal at [**http://portal.azure.com**](http://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. In the top-left corner of the portal, click **New**, and then click **Web + Mobile**.
+3. In the top-left corner of the portal, click **+ Create resource**, and then click **Web + Mobile**.
 
 4. On the Web + Mobile blade, click **Web App**.
 
@@ -39,7 +39,7 @@
 
 #### Task 2: Add a deployment slot
   
-1. In the hub menu of the Azure portal, click **More services**, and then click **App Services**.
+1. In the hub menu of the Azure portal, click **All services**, and then click **App Services**.
 
 2. On the App Services blade, click the web app that you created in the first task. 
 
@@ -61,13 +61,13 @@
 
 9. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-10. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+10. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   Get-AzureRmSubscription
-
   ```
 
-11. Note the value of the `Id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+11. Note the value of the **`Id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual **SubscriptionId** property of that subscription):
 
   ```
   Set-AzureRmContext -SubscriptionId 'SubscriptionId'
@@ -81,7 +81,7 @@
 
 13. Verify that the output references the web app that you created in the previous task.
 
-14. Type the following and then press Enter. Replace `Name of your web app` with the name of the web app you chose in the previous task: 
+14. Type the following and then press Enter. Replace **`Name of your web app`** with the name of the web app you chose in the previous task: 
 
   ```
   Get-AzureRMWebAppSlot -ResourceGroupName '20533D0501-LabRG' -Name 'Name of your web app'
@@ -174,7 +174,7 @@
 
 7. On the **File** menu, click **Open**, and then click **Project/Solution**.
 
-8. Browse to the folder E:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite.
+8. Browse to the folder **E:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite**.
 
 9. Click **AdatumWebsite.sln**, and then click **Open**.
 
@@ -243,42 +243,48 @@
 1. Switch to the Windows PowerShell window.
 
 2. At the Windows PowerShell prompt, type the following command, and then press Enter:
+
   ```
   Get-AzureRmWebApp -ResourceGroupName '20533D0501-LabRG'
   ```
 
 3. Note the name of your original web app and its location.
 
-4. Choose an Azure region that is different from the location of the original web app, preferably on another continent. This will become the `SecondLocation`. To identify names of Azure regions, at the Windows PowerShell prompt, type the following command, and then press Enter:
+4. Choose an Azure region that is different from the location of the original web app, preferably on another continent. This will become the **`SecondLocation`**. To identify names of Azure regions, at the Windows PowerShell prompt, type the following command, and then press Enter:
+
   ```
   Get-AzureRmLocation | Select-Object Location
   ```
 
-5. At the Windows PowerShell prompt, type the following command to create a new resource group, and then press Enter (replace `SecondLocation` with the name of the Azure region you chose:
+5. At the Windows PowerShell prompt, type the following command to create a new resource group, and then press Enter (replace **`SecondLocation`** with the name of the Azure region you chose:
+
   ```
   $rg2 = New-AzureRMResourceGroup -Name '20533D0502-LabRG' -Location 'SecondLocation'
   ```
 
 6. At the Windows PowerShell prompt, type the following command to create a new App Service Plan, and then press Enter:
+
   ```
   $appSvcPlan2 = New-AzureRMAppServicePlan -Location $rg2.Location -Tier Standard -Name '20533D0502LabPlan' -ResourceGroupName $rg2.ResourceGroupName
   ```
 
-7. At the Windows PowerShell prompt, type the following command (where the `webappname2` is a unique name that you will assign to a new web app you will create in the `SecondLocation` in the next step), and then press Enter:
+7. At the Windows PowerShell prompt, type the following command (where the **`webappname2`** is a unique name that you will assign to a new web app you will create in the **`SecondLocation`** in the next step), and then press Enter:
+
   ```
   Test-AzureRmDnsAvailability -DomainNameLabel 'webappname2' -Location $rg2.Location
   ```
 
 8. Verify that the command returns **True**. If not, keep re-running the same command but with different values of the **DomainNameLabel** parameter.
 
-9. At the Windows PowerShell prompt, type the following command to create a new web app, and then press Enter (the `webappname2` matches the name you identified in the previous step) :
+9. At the Windows PowerShell prompt, type the following command to create a new web app, and then press Enter (the **`webappname2`** matches the name you identified in the previous step):
+
   ```
   New-AzureRMWebApp -ResourceGroupName $rg2.ResourceGroupName -Name 'webappname2' -Location $rg2.Location -AppServicePlan $appSvcPlan2.Name
   ```
 
 10. Switch to the Azure portal in the Microsoft Edge window.
 
-11. On the left side of the Azure portal, click **More services**, and then click **App Services**.
+11. On the left side of the Azure portal, click **All services**, and then click **App Services**.
 
 12. On the App Services blade, click the entry representing the second web app you provisioned in this task.
 
@@ -290,7 +296,7 @@
 
 16. In the Visual Studio, on the **File** menu, click **Open**, and then click **Project/Solution**.
 
-17. Browse to the folder E:\\LabFiles\\Lab05\\Starter\\AdatumWebsite.
+17. Browse to the folder **E:\\LabFiles\\Lab05\\Starter\\AdatumWebsite**.
 
 18. Click **AdatumWebsite.sln**, and then click **Open**.
 
@@ -316,7 +322,7 @@
 
 #### Task 2: Create a Traffic Manager profile
   
-1. In Microsoft Edge, in the Azure portal, click **New**. 
+1. In Microsoft Edge, in the Azure portal, click **+ Create resource**. 
 
 2. In the **Search the marketplace** text box, type **Traffic Manager profile** and, in the list of results, click **Traffic Manager profile**. 
 
@@ -336,7 +342,7 @@
 
 #### Task 3: Add endpoints, and configure Traffic Manager
   
-1. In the Azure portal, in the hub menu, click **More services**, and then click **Traffic Manager Profiles**.
+1. In the Azure portal, in the hub menu, click **All services**, and then click **Traffic Manager Profiles**.
 
 2. On the Traffic Manager profiles blade, click the profile you created in the previous task.
 
@@ -367,13 +373,14 @@
 
 #### Task 4: Test Traffic Manager
   
-1. In Microsoft Edge, in the Azure portal, on the traffic Manager profile blade, click **Overview**, wait until the MONITOR STATUS column displays the **Online** status for both web apps, and then, click the link under the **DNS name** section.
+1. In Microsoft Edge, in the Azure portal, on the traffic Manager profile blade, click **Overview**, wait until the **MONITOR STATUS** column displays the **Online** status for both web apps, and then, click the link under the **DNS name** section.
 
 2. Microsoft Edge displays the Adatum web app. 
 
 3. On MIA-CL1, right-click **Start** and, in the right-click menu, click **Commmand Prompt (Admin)**. When prompted, in the **User Account Control** dialog box, click **Yes**.
 
-4. At the Command Prompt, type the following command, replacing `dnsname` is the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
+4. At the Command Prompt, type the following command, replacing **`dnsname`** with the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
+
   ```
   nslookup dnsname
   ```
@@ -388,7 +395,8 @@
 
 9. On the edpoint blade, click **Disabled**, and then click **Save**.
 
-10. Switch to the command prompt, type the following command, replacing `dnsname` is the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
+10. Switch to the command prompt, type the following command, replacing **`dnsname`** with the fully qualified DNS name of the Traffic Manager profile, and then press Enter:
+
   ```
   nslookup dnsname
   ```
@@ -405,6 +413,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -417,7 +426,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**http://portal.azure.com**](http://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
