--- a/Instructions/20533D_LAB_AK_06.md
+++ b/Instructions/20533D_LAB_AK_06.md
@@ -7,9 +7,9 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd** and that the setup script that you ran in the previous demonstration to prepare the environment has completed.
 
-2. Start Microsoft Edge, and then browse to https://portal.azure.com. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Microsoft Azure subscription.
+2. Start Microsoft Edge, and then browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Microsoft Azure subscription.
 
-3. In the hub menu, click **New**, and then click **Storage**.
+3. In the hub menu, click **+ Create resource**, and then click **Storage**.
 
 4. On the **Storage** blade, click **Storage account - blob, file, table, queue**.
 
@@ -39,7 +39,7 @@
 
 6. Wait until the storage account is provisioned.
 
-7. In the hub menu, click **More services**, and then, in the list of services, click **Storage accounts**.
+7. In the hub menu, click **All services**, and then, in the list of services, click **Storage accounts**.
 
 8. On the **Storage accounts** blade, click the storage account that you just created.
 
@@ -56,7 +56,7 @@
 
 #### Task 2: Install AzCopy
   
-1. In Microsoft Edge, open a new tab, and then browse to http://aka.ms/AzCopy.
+1. In Microsoft Edge, open a new tab, and then browse to [**http://aka.ms/AzCopy**](http://aka.ms/AzCopy).
 
 2. In the **Download and install AzCopy** section, click the **latest version of AzCopy on Windows** link.
 
@@ -66,9 +66,9 @@
 
 5. In the **Administrator: Windows PowerShell ISE** window, if the script pane is not visible, click **View** and then, in the **View** menu, click **Show Script Pane**.
 
-6. In the script pane, type `Set-Location -Path 'C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy'` and then press the **F5** key.
+6. In the script pane, type **`Set-Location -Path 'C:\Program Files (x86)\Microsoft SDKs\Azure\AzCopy'`** and then press the **F5** key.
 
-6. In the console pane, type `.\AzCopy /?` and then press Enter.
+6. In the console pane, type **`.\AzCopy /?`** and then press Enter.
 
 7. Scroll through the syntax information displayed in the console pane. 
 
@@ -76,6 +76,7 @@
 #### Task 3: Use AzCopy to upload blobs
   
 1. In the **Administrator: Windows PowerShell ISE** window, in the script pane, type:
+
   ```
   .\AzCopy.exe /Dest:https://<storage-account-name>.blob.core.windows.net/asset-images /destkey:<access-key> /Source:E:\Labfiles\Lab06\Starter\asset-images
   ```
@@ -84,17 +85,17 @@
 
 3. On the access keys blade, click the **Click to copy** icon next to **Storage account name**. If prompted to allow access to Clipboard, click **Allow access**.
 
-4. Switch to the **Administrator: Windows PowerShell ISE** window and replace the `<storage-account-name>` entry with the content of Clipboard.
+4. Switch to the **Administrator: Windows PowerShell ISE** window and replace the **`<storage-account-name>`** entry with the content of Clipboard.
 
 5. Switch to the Microsoft Edge window and, on the access keys blade, click the **Click to copy** icon next to **key1**. 
 
-6. Switch to the **Administrator: Windows PowerShell ISE** window and replace the `<access-key>` entry with the content of Clipboard.
+6. Switch to the **Administrator: Windows PowerShell ISE** window and replace the **`<access-key>`** entry with the content of Clipboard.
 
 7. Press the **F5** key to execute the command in the script pane.
 
-> **Note**: If you execute the command and it fails, make note of the error message and the directory in which the journal files are located.  Temporary data files are put into the journal file folder with the default path **"%LocalAppData%\Microsoft\Azure\AzCopy** and need to be deleted before running the command again.
+> **Note**: If you execute the command and it fails, make note of the error message and the directory in which the journal files are located.  Temporary data files are put into the journal file folder with the default path **"%LocalAppData%\Microsoft\Azure\AzCopy"** and need to be deleted before running the command again.
 
-8. Examine the output in the console pane and verify that the content of the E:\\Labfiles\\Lab06\\Starter\\asset-images folder was copied to the Azure Storage account container **asset-images**.
+8. Examine the output in the console pane and verify that the content of the **E:\\Labfiles\\Lab06\\Starter\\asset-images** folder was copied to the Azure Storage account container **asset-images**.
 
 9. In the Azure portal, on the storage account blade, click **Overview**.
 
@@ -111,21 +112,24 @@
   
 #### Task 1: Create a file share and upload files
   
-1. Switch to the Administrator: Windows PowerShell ISE window.
+1. Switch to the **Administrator: Windows PowerShell ISE** window.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Add-AzureRmAccount
   ```
 
 3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   Get-AzureRmSubscription
   ```
 
-5. Note the value of the `Id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+5. Note the value of the **`Id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
+
   ```
   Set-AzureRmContext -SubscriptionId 'SubscriptionId'
   ```
@@ -134,7 +138,7 @@
 
 7. In the **Open** dialog box, browse to E:\\Labfiles\\Lab06\\Starter\\, click **New-20533D06FileShare.ps1**, and then click **Open**.
 
-8. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<storage-account-name>` value with the name of the Azure storage account that you created in the previous exercise.
+8. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the **`<storage-account-name>`** value with the name of the Azure storage account that you created in the previous exercise.
 
 9. Review the script, noting that it:
 
@@ -160,7 +164,7 @@
 
 #### Task 2: Access a file share from an Azure VM
   
-1. From the MIA-CL1 lab VM, in Microsoft Edge, on the Azure portal, click **More services**, click **Virtual machines**.
+1. From the MIA-CL1 lab VM, in Microsoft Edge, on the Azure portal, click **All services**, click **Virtual machines**.
 
 2. On the **Virtual machines** blade, click ellipsis to the right of the **20533D0601-vm1** entry and click **Connect**.
 
@@ -182,9 +186,9 @@
 
 9. In the 20533D0601-vm1 Remote Desktop window, click the **Internet Explorer** icon on the taskbar. If prompted to set up Internet Explorer, ensure that the **Use recommended security, privacy, and compatibility settings** option is selected, and then click **OK**.
 
-10. Browse to **https://portal.azure.com**, and then sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+10. Browse to [**https://portal.azure.com**](https://portal.azure.com), and then sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-11. In the hub menu, click **More services**, and then click **Storage accounts**.
+11. In the hub menu, click **All services**, and then click **Storage accounts**.
 
 12. On the **Storage accounts** blade, click the storage account that you created in the previous exercise, and then on the blade for your storage account, click the **Files** tile.
 
@@ -200,9 +204,9 @@
 
 18. In the script pane, paste the content of Clipboard. 
 
-19. In the command line you copied, replace `[drive letter]` with `Z:`.
+19. In the command line you copied, replace **`[drive letter]`** with **`Z:`**.
 
-> **Note**: If your key (password) has a **/** in it, the copy to clipboard will escape this character and replace it with **\/**.  This will cause the command to fail. Correct the escaped characters or copy the key directly from Azure.
+> **Note**: If your key (password) has a **/** in it, the copy to clipboard will escape this character and replace it with **\\/**.  This will cause the command to fail. Correct the escaped characters or copy the key directly from Azure.
 
 
 20. Run the command by pressing the F5 key
@@ -226,7 +230,7 @@
   
 #### Task 1: Create a recovery services vault
   
-1. On the MIA-CL1, in the Azure portal displayed in Microsoft Edge, in the hub menu, click **+ New**, on the **New** blade, click **Storage**, and, on the **Storage** blade, click **Backup and Site Recovery (OMS)**.
+1. On the MIA-CL1, in the Azure portal displayed in Microsoft Edge, in the hub menu, click **+ Create resource**, on the **New** blade, click **Storage**, and, on the **Storage** blade, click **Backup and Site Recovery (OMS)**.
 
 2. On the **Recovery services vault** blade, specify the following settings and click **Create**:
 
@@ -245,7 +249,7 @@
 
 #### Task 2: Configure the vault for on-premises backup
   
-1. In the hub menu, click **More Services**. In the search text box, type **Recovery Services vaults** and, in the list of results, click **Recovery Services vaults**.
+1. In the hub menu, click **All services**. In the search text box, type **Recovery Services vaults** and, in the list of results, click **Recovery Services vaults**.
 
 2. On the **Recovery Services vaults** blade, click **vault20533D06**.
 
@@ -341,7 +345,7 @@
 
 #### Task 6: Stop backups and delete the Azure Recovery services vault
   
-1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the E:\\ drive of **mia-cl1.**.
+1. On the **Backup Items (Azure Backup Agent)** blade, click the entry referencing the **E:\\** drive of **mia-cl1.**.
 
 2. On the **E:\\ on mia-cl1.** blade, click the **mia-cl1.** link.
 
@@ -361,6 +365,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -373,7 +378,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
