--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -7,11 +7,11 @@
 
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates an Azure VM of the size that supports nested virtualization. You will use it to install Docker Toolbox for Windows.
 
-2. Start Microsoft Edge and browse to https://portal.azure.com. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
+2. Start Microsoft Edge and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
-3. In the Azure portal, in the hub menu, click **More services** and, in the service menu, click **Virtual machines**.
+3. In the Azure portal, in the hub menu, click **All services** and, in the service menu, click **Virtual machines**.
 
-4. On the Virtual machines blade, click the ellipsis next to the **20533D0701-vm0** entry and, in the drop-down menu, click **Connect**.
+4. On the Virtual machines blade, click the ellipsis (**...**) next to the **20533D0701-vm0** entry and, in the drop-down menu, click **Connect**.
 
 5. When prompted, click **Save** and then click **Open**.
 
@@ -37,7 +37,7 @@
 
 14. If prompted, ensure that **Use recommended security, privacy, and compatibility settings** is selected and then click **OK**.
 
-15. In Internet Explorer, navigate to https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows
+15. In Internet Explorer, navigate to [**https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows**](https://docs.docker.com/docker-for-windows/install/#download-docker-for-windows)
 
 16. On the **Install Docker for Windows** page, click **Get Docker for Windows (Stable)**.
 
@@ -48,7 +48,7 @@
 
 #### Task 2: Use Docker Machine to create hosts in Azure Deploy Docker Toolbox for Windows
 
-1. On MIA-CL1, in the Azure portal, on the Virtual machines blade, click the ellipsis next to the **20533D0701-vm0** entry and, in the drop-down menu, click **Connect**.
+1. On MIA-CL1, in the Azure portal, on the Virtual machines blade, click the ellipsis (**...**) next to the **20533D0701-vm0** entry and, in the drop-down menu, click **Connect**.
 
 2. When prompted, click **Save** and then click **Open**.
 
@@ -56,7 +56,7 @@
 
 4. In the Remote Desktop session to 20533D0701-vm0, if prompted in Docker for Windows dialog box whether to enable Hyper-V, click **Cancel**.
 
-5. In the Remote Desktop session to 20533D0701-vm0, start Internet Explorer and browse to https://portal.azure.com. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
+5. In the Remote Desktop session to 20533D0701-vm0, start Internet Explorer and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
 6. Click the **Cloud Shell** icon in the toolbar.
 
@@ -72,31 +72,31 @@
 
 10. This should display the Id of your Azure subscription. Select the output of the command, right-click the selection, and, in the right-click menu, click **Copy**.
 
-11. In the **Cloud shell** pane, type the following, replacing `Azure-region` with the name of the Azure region you selected when running **Add-20533DEnvironment** at the beginning of this module, and press Enter:
+11. In the **Cloud shell** pane, type the following, replacing **`Azure-region`** with the name of the Azure region you selected when running **Add-20533DEnvironment** at the beginning of this module, and press Enter:
 
   ```
   az vm image list-skus --location "Azure-region" --publisher Canonical --offer UbuntuServer --output table
   ```
 
-12. Identify the values appearing in the **Sku** column in the output. Verify that **16.04.0-LTS** is available. If that is not the case, replace **16.04.0-LTS** with one of avaialble SKUs in step 14.
+12. Identify the values appearing in the **Sku** column in the output. Verify that **16.04.0-LTS** is available. If that is not the case, replace **16.04.0-LTS** with one of avaialble SKUs in step 16 below.
 
 13. Close the **Cloud Shell** pane.
 
 14. Right-click **Start** and click **Command Prompt (Admin)**.
 
-15. From the **Administrator: Command Prompt** window, type the following, and then press Enter : 
+15. From the **Administrator: Command Prompt** window, type the following, and then press Enter: 
 
   ```
   cd %USERPROFILE%
   ```
   
-16. From the **Administrator: Command Prompt** window, type the following, replacing `Azure-subscription-Id` with the value of your Azure subscription ID you copied earlier in this task, and replacing the `Azure-region` with the name of the Azure region you selected when running **Add-20533DEnvironment** at the beginning of this module, and then press Enter (make sure to use the lower case characters when specifying the virtual machine name and verify that the specified virtual machine size is available in the target Azure region): 
+16. From the **Administrator: Command Prompt** window, type the following on one line, replacing **`Azure-subscription-Id`** with the value of your Azure subscription ID you copied earlier in this task, and replacing the **`Azure-region`** with the name of the Azure region you selected when running **Add-20533DEnvironment** at the beginning of this module, and then press Enter (make sure to use the lower case characters when specifying the virtual machine name and verify that the specified virtual machine size is available in the target Azure region): 
 
   ```
   docker-machine create --driver azure --azure-ssh-user student --azure-subscription-id "Azure-subscrption-id" --azure-open-port 80 --azure-image "Canonical:UbuntuServer:16.04.0-LTS:latest" --azure-location "Azure-region" --azure-resource-group "20533D0702-LabRG" --azure-availability-set "20533D0702-avset" --azure-static-public-ip --azure-size "Standard_A1_v2" "20533d0702-vm0"
   ```
   
-17. The **Administrator: Command Prompt** window will display the message asking you to use a web browser to open the page https://aka.ms/devicelogin and enter the code provided at the end of the message. Start Intrenet Explorer and browse to https://aka.ms/devicelogin. 
+17. The **Administrator: Command Prompt** window will display the message asking you to use a web browser to open the page https://aka.ms/devicelogin and enter the code provided at the end of the message. Start Intrenet Explorer and browse to [**https://aka.ms/devicelogin**](https://aka.ms/devicelogin). 
 
 18. On the **Device Login** page, type the code and click **Continue**.
 
@@ -116,13 +116,13 @@
 
 24. Verify that the output includes the newly created Azure VM. 
 
-25. To obtain the IP address of the target Docker Azure VM, note the IP address in the **URL** column of the output of the `docker-machine ls` command. Alternatively, in the **Administrator: Command Prompt** window, type the following, and then press Enter: 
+25. To obtain the IP address of the target Docker Azure VM, note the IP address in the **URL** column of the output of the **`docker-machine ls`** command. Alternatively, in the **Administrator: Command Prompt** window, type the following, and then press Enter: 
 
   ```
   docker-machine ip 20533D0702-vm0
   ```
 
-26. To verify connectivity to the target Docker Azure VM, in the **Administrator: Command Prompt** window, type the following, replacing `IP-address` with the IP address you identified in the previous step and then press Enter: 
+26. To verify connectivity to the target Docker Azure VM, in the **Administrator: Command Prompt** window, type the following on one line, replacing **`IP-address`** with the IP address you identified in the previous step and then press Enter: 
 
   ```
 docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.docker\machine\certs\ca.pem --tlscert=C:\Users\Student\.docker\machine\certs\cert.pem --tlskey=C:\Users\Student\.docker\machine\certs\key.pem ps
@@ -147,7 +147,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   @FOR /f "tokens=*" %i IN ('docker-machine env 20533d0702-vm0') DO @%i
   ```
 
-3. In the **Administrator: Command Prompt** window, type the following, press Enter, and verify that the output contains Docker environment variables, including `DOCKER_CERT_PATH`, `DOCKER_HOST`, `DOCKER_MACHINE_NAME`, and `DOCKER_TLS_VERIFY`:
+3. In the **Administrator: Command Prompt** window, type the following, press Enter, and verify that the output contains Docker environment variables, including **`DOCKER_CERT_PATH`**, **`DOCKER_HOST`**, **`DOCKER_MACHINE_NAME`**, and **`DOCKER_TLS_VERIFY`**:
 
   ```
   SET DOCKER
@@ -243,7 +243,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
   - Source: **Any**
 
-  - Source port ranges: *
+  - Source port ranges: **\***
 
   - Destination: **Any**
 
@@ -266,7 +266,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   
 #### Task 1: Create an Azure Container Registry
 
-1. In the Remote Desktop session to 20533D0701-vm0, in the Azure portal in the Internet Explorer window, click **+ New**.
+1. In the Remote Desktop session to 20533D0701-vm0, in the Azure portal in the Internet Explorer window, click **+ Create resource**.
 
 2. On the **New** blade, click **Containers**, and then click **Azure Container Registry**. 
 
@@ -289,7 +289,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 #### Task 2: Identify Azure Container Registry authentication settings.
 
-1. In the Remote Desktop session to 20533D0701-vm0, in the Azure portal in the Internet Explorer window, click **More services**, and in the service menu, click **Container registries**.
+1. In the Remote Desktop session to 20533D0701-vm0, in the Azure portal in the Internet Explorer window, click **All services**, and in the service menu, click **Container registries**.
 
 2. On the **Container registries** blade, click the Azure container registry you created in the previous task.
 
@@ -302,7 +302,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 #### Task 3: Push an image to Azure Container Registry.
 
-1. In the Remote Desktop session to 20533D0701-vm0, in the **Administrator: Command Prompt** window, to log in to the Azure Container registry you created in the first task, type the following, replacing the `user-name`, `password`, and `login-server` entries with the values you identified in the previous task, and then press Enter: 
+1. In the Remote Desktop session to 20533D0701-vm0, in the **Administrator: Command Prompt** window, to log in to the Azure Container registry you created in the first task, type the following, replacing the **`user-name`**, **`password`**, and **`login-server`** entries with the values you identified in the previous task, and then press Enter: 
 
   ```
   docker login --username user-name --password password login-server
@@ -313,13 +313,13 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   docker pull microsoft/aci-helloworld
   ```
 
-3. Wait for the image to be downloaded to the Docker Azure VM. Next, to tag the image with the Azure Container registry name, in the **Administrator: Command Prompt** window, type the following, replacing the `login-server` entry with the value you identified in the previous task, and then press Enter: 
+3. Wait for the image to be downloaded to the Docker Azure VM. Next, to tag the image with the Azure Container registry name, in the **Administrator: Command Prompt** window, type the following, replacing the **`login-server`** entry with the value you identified in the previous task, and then press Enter: 
 
   ```
   docker tag microsoft/aci-helloworld login-server/aci-helloworld:v1
   ```
 
-4. To push the tagged image to the Azure Container registry, in the **Administrator: Command Prompt** window, type the following, replacing the `login-server` entry with the value you identified in the previous task, and then press Enter: 
+4. To push the tagged image to the Azure Container registry, in the **Administrator: Command Prompt** window, type the following, replacing the **`login-server`** entry with the value you identified in the previous task, and then press Enter: 
 
   ```
   docker push login-server/aci-helloworld:v1
@@ -330,7 +330,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 #### Task 4: Download and deploy images from the Azure Container Registry
 
-1. In the Remote Desktop session to 20533D0701-vm0, in the **Administrator: Command Prompt** window, to pull an image from the Azure Container registry, type the following, replacing the `login-server` entry with the values you identified earlier in this exercise, and then press Enter: 
+1. In the Remote Desktop session to 20533D0701-vm0, in the **Administrator: Command Prompt** window, to pull an image from the Azure Container registry, type the following, replacing the **`login-server`** entry with the values you identified earlier in this exercise, and then press Enter: 
 
   ```
   docker pull login-server/aci-helloworld:v1
@@ -350,7 +350,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
   docker ps
   ```
 
-5. Note that the output includes the `login-server/aci-helloworld:v1` image. 
+5. Note that the output includes the **`login-server/aci-helloworld:v1`** image. 
 
 6. Close the Remote Desktop Session to 20533D0701-vm0.
 
@@ -375,7 +375,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
@@ -400,7 +400,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 3. If you are presented with the **You have no storage mounted** message, ensure that the name of your subscription appears in the **Subscription** drop down list, and click **Create storage**.
 
-4. At the bash prompt, in the Cloud shell pane, type the following command, replacing `Azure-region` with the name of the Azure region where you want to deploy the ACS Kubernetes cluster and then press Enter:
+4. At the bash prompt, in the Cloud shell pane, type the following command, replacing **`Azure-region`** with the name of the Azure region where you want to deploy the ACS Kubernetes cluster and then press Enter:
 
   ```
   az group create --name 20533D0704-LabRG --location "Azure-region"
@@ -523,7 +523,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
