--- a/Instructions/20533D_LAB_AK_08.md
+++ b/Instructions/20533D_LAB_AK_08.md
@@ -7,11 +7,11 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Start Windows Microsoft Edge, navigate to https://portal.azure.com, and then sign in with an account that is the Service Administrator of your Azure subscription.
+2. Start Windows Microsoft Edge, navigate to [**https://portal.azure.com**](https://portal.azure.com), and then sign in with an account that is the Service Administrator of your Azure subscription.
 
 3. From the Azure portal, identify the region in which you can provision an Azure VM of the size **Standard_A1_v2**. This will be the region you will use to provision all resources in this lab.
 
-4. In the Azure portal, click **+ New**. On the **New** blade, click **Databases** and then click **SQL Database**.
+4. In the Azure portal, click **+ Create resource**. On the **New** blade, click **Databases** and then click **SQL Database**.
 
 5. On the **SQL Database** blade, set the **Database name** to **CloudServiceProdDB**. 
 
@@ -35,9 +35,9 @@
 
 - Confirm password: **Pa55w.rd**
 
-- Location: the Azure region you identified in step 4 of this task
+- Location: 'the Azure region you identified in step 3 of this task'
 
-- Allow azure services to access server: make sure that the checkbox is enabled
+- Allow azure services to access server: make sure that the checkbox is **enabled**
 
 12. Back on the SQL Database blade, in the **Want to use SQL elastic pool?** section, ensure that **Not now** is selected
 
@@ -51,11 +51,11 @@
 
 #### Task 2: Create an Azure Storage account for a PaaS cloud service
   
-1. In the Azure portal, click **+ New**. On the **New** blade, click **Storage** and then, on the **Storage** blade, click **Storage account - blob, file, table, queue**.
+1. In the Azure portal, click **+ Create resource**. On the **New** blade, click **Storage** and then, on the **Storage** blade, click **Storage account - blob, file, table, queue**.
 
 2. On the **Create storage account** blade, specify the following settings and click **Create**:
 
-- Name: any unique name consisting of between 3 and 24 lower case letters or digits
+- Name: 'any unique name consisting of between 3 and 24 lower case letters or digits'
 
 - Deployment model: **Resource manager**
 
@@ -67,15 +67,15 @@
 
 - Secure transfer required: **Disabled**
 
-- Subscription: the name of the Azure subscription where you created the SQL database in the previous task
+- Subscription: 'the name of the Azure subscription where you created the SQL database in the previous task'
 
 - Resource group: ensure that the **Use existing** option is selected and click **20533D0801-LabRG** in the drop-down list
 
-- Location: the same location you specified in the previous task
+- Location: 'the same location you specified in the previous task'
 
 - Virtual networks (Preview): **Disabled**
 
-- Pin to dashboard: leave the checkbox unchecked
+- Pin to dashboard: leave the checkbox **unchecked**
 
 
 
@@ -85,7 +85,7 @@
 
 2. Click **File**, click **Open**, and then click **File**.
 
-3. Browse to E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+3. Browse to **E:\\LabFiles\\Lab08\\Starter\\Production\\Package**.
 
 4. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
@@ -101,7 +101,7 @@
 
 10. In the **&lt;Instances&gt;** element, set the **count** attribute to **2**.
 
-11. Switch to the Azure portal, and, in the hub menu, click **More services**.
+11. Switch to the Azure portal, and, in the hub menu, click **All services**.
 
 12. In the service menu, click **Storage accounts**.
 
@@ -119,7 +119,7 @@
 
 19. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
 
-20. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+20. Place the cursor between the quotation marks and then press **Ctrl+V** to paste the storage connection string you copied from the Azure portal.
 
 21. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorker**.
 
@@ -135,7 +135,7 @@
 
 27. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
 
-28. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+28. Place the cursor between the quotation marks and then press **Ctrl+V** to paste the storage connection string you copied from the Azure portal.
 
 29. Locate the **&lt;Role&gt;** element with the name **AdatumAdsWorker**.
 
@@ -143,11 +143,11 @@
 
 31. Delete the string in the **value** attribute, leaving the leading and trailing quotation marks.
 
-32. Place the cursor between the quotation marks and then press Ctrl+V to paste the storage connection string you copied from the Azure portal.
+32. Place the cursor between the quotation marks and then press **Ctrl+V** to paste the storage connection string you copied from the Azure portal.
 
 33. Switch to the Microsoft Edge window displaying the Azure portal.
 
-34. In the Azure portal, in the hub menu on the left, click **More services**.
+34. In the Azure portal, in the hub menu on the left, click **All services**.
 
 35. In the service menu, click **SQL databases**.
 
@@ -183,19 +183,19 @@
 
 #### Task 4: Deploy an PaaS cloud service
   
-1. In the Azure portal, click **+ New**. In the **Search the Marketplace** text box, type **Cloud service**, and, in the list of results, click **Cloud service**.
+1. In the Azure portal, click **+ Create resource**. In the **Search the Marketplace** text box, type **Cloud service**, and, in the list of results, click **Cloud service**.
 
 2. On the **Cloud service** blade, click **Create**.
 
 3. On the **Cloud service (classic)** blade, specify the following settings
 
-- DNS name: any valid, unique name
+- DNS name: 'any valid, unique name'
 
-- Subscription: the name of the Azure subscription you have been using for this lab
+- Subscription: 'the name of the Azure subscription you have been using for this lab'
 
 - Resource group: ensure that the **Use existing** option is selected and click **20533D0801-LabRG** in the drop-down list
 
-- Location: the same location you have been using in this lab
+- Location: 'the same location you have been using in this lab'
 
 4. Click **Package (Optional) Select a package**. 
 
@@ -207,7 +207,7 @@
 
 8. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-9. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+9. In the **Choose File to Upload** dialog box, browse to **E:\\LabFiles\\Lab08\\Starter\\Production\\Package**.
 
 10. Click **AdatumAdsCloudService.cspkg**, and then click **Open**.
 
@@ -215,7 +215,7 @@
 
 12. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-13. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+13. In the **Choose File to Upload** dialog box, browse to **E:\\LabFiles\\Lab08\\Starter\\Production\\Package**.
 
 14. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
@@ -237,7 +237,7 @@
   
 #### Task 1: Perform a staged deployment of a PaaS cloud service
   
-1. In the Azure portal in the Microsoft Edge window, in the Hub menu, click **More services** and then click **Cloud services (classic)**.
+1. In the Azure portal in the Microsoft Edge window, in the Hub menu, click **All services** and then click **Cloud services (classic)**.
 
 2. In the **Cloud services (classic)** blade, click the cloud service you created in the prevous task.
 
@@ -255,7 +255,7 @@
 
 9. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-10. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
+10. In the **Choose File to Upload** dialog box, browse to **E:\\LabFiles\\Lab08\\Starter\\Staging\\Package**.
 
 11. Click **AdatumAdsCloudService.cspkg**, and then click **Open**.
 
@@ -263,7 +263,7 @@
 
 13. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-14. In the **Choose File to Upload** dialog box, browse to E:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+14. In the **Choose File to Upload** dialog box, browse to **E:\\LabFiles\\Lab08\\Starter\\Production\\Package**.
 
 15. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
@@ -295,13 +295,13 @@
   Get-AzureSubscription
 ```
 
-5. Note the value of the `Id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+5. Note the value of the **`Id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
 
 ```
   Select-AzureSubscription -SubscriptionId 'SubscriptionId'
 ```
 
-6. Next, execute the following script by typing each of the following commands at the Windows PowerShell prompt, replacing `cloud-service-name` with the name of the cloud service you deployed earlier in this lab, and pressing Enter:
+6. Next, execute the following script by typing each of the following commands at the Windows PowerShell prompt, replacing **`cloud-service-name`** with the name of the cloud service you deployed earlier in this lab, and pressing Enter:
 
 ```
   $serviceName = 'cloud-service-name'
@@ -400,11 +400,11 @@
 
 - Period: **Over the last 5 minutes**
 
-- Email owners, contributors, and readers: enable the checkbox
+- Email owners, contributors, and readers: **enable** the checkbox
 
-- Additional administrator email(s): type the email address of the Service Administrator account of your Azure subscription
+- Additional administrator email(s): 'type the email address of the Service Administrator account of your Azure subscription'
 
-- Webhook: leave the textbox clear
+- Webhook: leave the textbox **clear**
 
 4. Switch to the Microsoft Edge tab showing the **Production** deployment of the cloud service. Refresh the page several times.
 
@@ -413,7 +413,7 @@
 
 #### Task 3: Monitor a cloud service
   
-1. In the Azure portal, in the hub menu, click **More services** and then, int the service menu, click **Monitor**.
+1. In the Azure portal, in the hub menu, click **All services** and then, int the service menu, click **Monitor**.
 
 2. On the **Monitor** blade, click **Alerts**
 
@@ -421,7 +421,7 @@
 
 3. Open a new Microsoft Edge tab.
 
-4. In the address bar, type https://www.outlook.com and then press Enter.
+4. In the address bar, type [**https://www.outlook.com**](https://www.outlook.com) and then press Enter.
 
 5. If you are prompted to sign in, type the user name and password of the Microsoft Account that is the Service Administrator of your Azure subscription. 
 
@@ -439,6 +439,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -451,7 +452,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
