--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -7,15 +7,15 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
-2. Start Mirosoft Edge, browse to the Azure portal at http://portal.azure.com, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
+2. Start Mirosoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-3. In the Azure portal, in the hub menu, click **+ New**, click **Security + Identity** and then, click **Azure Active Directory**.
+3. In the Azure portal, in the hub menu, click **+ Create resource**, click **Security + Identity** and then, click **Azure Active Directory**.
 
 4. On the **Create directory** blade, specify the following and click **Create**:
 
   - Organization name: **Adatum**
 
-  - Initial domain name: a unique, valid name
+  - Initial domain name: _a unique, valid name_
 
   - Country or region: **United States**
 
@@ -26,7 +26,7 @@
   
 1. Refresh the Mirosoft Edge window displaying the Azure portal. Next, click your name in the upper right corner of the Azure portal and, in the drop-down menu, click the name of the Azure Active Directory tenant you created in the previous task.
 
-2. In the hub menu of the Azure portal, click **More services** and, in the service menu, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
+2. In the hub menu of the Azure portal, click **All services** and, in the service menu, click **Azure Active Directory**. This will display the **adatum** Azure Active Directory tenant blade.
 
 3. Click **Quick Start**.
 
@@ -87,7 +87,7 @@
 
 15. Click **Create**.
 
-16. Start an InPrivate Mirosoft Edge session and browse to the Azure portal at http://portal.azure.com.
+16. Start an InPrivate Mirosoft Edge session and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 17. When prompted to sign in, specify the full user name (including the @_domain-name_.onmicrosoft.com suffix) of Remi Desforges' account and the corresponding temporary password. 
 
@@ -99,7 +99,7 @@
 
 20. Close the InPrivate Mirosoft Edge session.
 
-21. Start an InPrivate Mirosoft Edge window and browse to the Azure portal at http://portal.azure.com.
+21. Start an InPrivate Mirosoft Edge window and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password.
 
@@ -209,13 +209,14 @@
 
 2. In the PowerShell ISE, click **File**, and then click **Open**.
 
-3. In the **Open** dialog box, browse to E:\\Labfiles\\Lab09\\Starter\\.
+3. In the **Open** dialog box, browse to **E:\\Labfiles\\Lab09\\Starter\\**.
 
 4. Click **Set-20553D0901Lab.ps1**, and then click **Open**.
 
 5. If the script pane is not visible, on the **View** menu, click **Show Script Pane**.
 
 6. In the PowerShell ISE, in the console pane, enter the following command and press Enter:
+
   ```
   Connect-MsolService
   ```
@@ -223,22 +224,25 @@
 7. In the **Enter Credentials** dialog box, enter the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber and its password, and then click **OK**.
 
 8. In the PowerShell ISE, in the script pane, locate the following code:
+
   ```
   New-MsolUser -UserPrincipalName mledford@<#Copy your Azure Directory domain name here#>.onmicrosoft.com -DisplayName 'Mario Ledford' -FirstName 'Mario' -LastName 'Ledford' -Password 'Pa55w.rd123' -ForceChangePassword $false -UsageLocation 'US'
   ```
 
-9. Replace `<#Copy your Azure Directory domain name here#>` with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
+9. Replace **`<#Copy your Azure Directory domain name here#>`** with the unique name you used to specify the DNS domain name of the Adatum Azure AD tenant in the first exercise of this lab.
 
 10. In the PowerShell ISE window, in the script pane, select the code that you just edited.
 
 11. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
 12. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new user appears in the list of users:
+
   ```
   Get-MsolUser
   ```
 
 13. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+
   ```
   New-MsolGroup -DisplayName 'Azure team' -Description 'Adatum Azure team users'
   ```
@@ -246,11 +250,13 @@
 14. On the toolbar, click the **Run Selection** button and wait for the script to complete.
 
 15. In the PowerShell ISE window, in the console pane, enter the following command, press Enter, and verify that the new group appears in the list of groups:
+
   ```
   Get-MsolGroup
   ```
 
 16. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+
   ```
   $group = Get-MsolGroup | Where-Object DisplayName -eq 'Azure team'
   ```
@@ -258,6 +264,7 @@
 17. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
 18. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+
   ```
   $user = Get-MsolUser | Where-Object DisplayName -eq 'Mario Ledford'
   ```
@@ -265,6 +272,7 @@
 19. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
 20. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+
   ```
   Add-MsolGroupMember -GroupObjectId $group.ObjectId -GroupMemberType 'User' -GroupMemberObjectId $user.ObjectId
   ```
@@ -272,6 +280,7 @@
 21. On the toolbar, click the **Run Selection** button, and wait for the script to complete.
 
 22. In the PowerShell ISE window, in the script pane, locate the following code and select it:
+
   ```
   Get-MsolGroupMember -GroupObjectId $group.ObjectId
   ```
@@ -349,7 +358,7 @@
 
 #### Task 2: Configure SSO on a client computer
   
-1. From Microsoft Edge, browse to https://myapps.microsoft.com
+1. From Microsoft Edge, browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
@@ -373,7 +382,7 @@
 
 12. Verify that **Access Panel Extension** is turned on. If not, click **Access Panel Extension** and move the slider to the **On** position.
 
-13. Restart Microsoft Edge and browse back to **https://myapps.microsoft.com**. If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
+13. Restart Microsoft Edge and browse back to [**https://myapps.microsoft.com**](https://myapps.microsoft.com). If prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account you created in the previous exercise and **Pa55w.rd** as the corresponding password. 
 
 14. On the Apps page, click **Skype**. Note that you are prompted for credentials, because you did not enter any credentials on behalf of the user when configuring the application single sign-on settings.
 
@@ -391,9 +400,9 @@
   
 #### Task 1: Configure Multi-Factor Authentication
   
-1. Start Microsoft Edge, browse to the Azure  portal at http://portal.azure.com, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
+1. Start Microsoft Edge, browse to the Azure  portal at [**https://portal.azure.com**](https://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-2. In the hub menu, click **More services** and then, in the service menu, click **Azure Active Directory**.
+2. In the hub menu, click **All services** and then, in the service menu, click **Azure Active Directory**.
 
 3. On the **adatum** blade, click **Users and groups**.
 
@@ -401,7 +410,7 @@
 
 5. If the **Multi-Factor Authentication** button appears in the toolbar of the **Users and groups - All users** blade, click **Multi-Factor Authentication**. This will open another Microsoft Edge tab. If prompted, sign in using the Microsoft account that is the Service Administrator of your subscription. Proceed directly to step 13.  
 
-6. If the **Multi-Factor Authentication** button does not appear in the toolbar of the **Users and groups - All users** blade, open another tab of Microsoft Edge and browse to https://manage.windowsazure.com.
+6. If the **Multi-Factor Authentication** button does not appear in the toolbar of the **Users and groups - All users** blade, open another tab of Microsoft Edge and browse to [**https://manage.windowsazure.com**](https://manage.windowsazure.com).
 
 7. If prompted, sign in with the credentials for the Microsoft account that is the Service Administrator of your Azure subscription.
 
@@ -428,7 +437,7 @@
 
 #### Task 2: Test Multi-Factor Authentication
   
-1. Start Microsoft Edge and browse to https://myapps.microsoft.com
+1. Start Microsoft Edge and browse to [**https://myapps.microsoft.com**](https://myapps.microsoft.com).
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
@@ -457,9 +466,9 @@
   
 #### Task 1: Join a Windows 10-based computer to Azure AD
 
-1. Start Microsoft Edge, browse to the Azure portal at http://portal.azure.com, and then sign in using the Microsoft account that is the Service Administrator of your subscription.
+1. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and then sign in using the Microsoft account that is the Service Administrator of your subscription.
 
-2. In the hub menu, click **More services** and then, in the service menu, click **Azure Active Directory**.
+2. In the hub menu, click **All services** and then, in the service menu, click **Azure Active Directory**.
 
 3. On the **adatum** blade, click **Devices**.
 
@@ -508,7 +517,7 @@
 
 5. On the **All set!** page, click **OK**.
 
-6. Start Microsoft Edge, and then go to https://portal.azure.com
+6. Start Microsoft Edge, and then go to [**https://portal.azure.com**](https://portal.azure.com).
 
 7. Verify that you are automatically signed in as Karen Gruber by using single sign-on.
 
@@ -523,6 +532,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -535,7 +545,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
