--- a/Instructions/20533D_LAB_AK_10.md
+++ b/Instructions/20533D_LAB_AK_10.md
@@ -8,6 +8,7 @@
 1. Sign in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
 
 2. Right-click **Start** and click **Run** (alternatively, click **Start** and type **Run** in the Start menu Search box, or press the **Windows key+R**). In the **Run** text box, type the following and press **Enter**:
+
   ```
   Notepad E:\Labfiles\Lab10\Starter\Set-20533D1001Lab.ps1
   ```
@@ -16,13 +17,13 @@
 
 4. In Notepad, click **Edit** and, in the drop-down menu, click **Copy**.
 
-5. Open Microsoft Edge and browse to the Azure portal at https://portal.azure.com
+5. Open Microsoft Edge and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 6. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 7. Hover the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
 
-8. In the hub menu of the Azure portal, click **More services** and then, in the service menu, click **Virtual machines**.
+8. In the hub menu of the Azure portal, click **All services** and then, in the service menu, click **Virtual machines**.
 
 9. On the Virtual machines blade, click the ellipsis to the right of the **20533D1001-vm1** entry and click **Connect**.
 
@@ -47,9 +48,11 @@
 17. Click **Debug** and, in the drop-down menu, click **Run/Continue**.
 
 18. In the PowerShell ISE console, type the following and press Enter:
+
   ```
   Get-ADUser -Filter * | Select-Object DistinguishedName
   ```
+
 19. Verify that the list of accounts includes **Beverly Beach** in the **AccountsToSync** organizational unit and **Darwin Shivers** in the **AccountsNotToSync** organizational unit.
 
 20. Close the **Administrator: Windows PowerShell ISE** window.
@@ -67,25 +70,25 @@
 
 5. If prompted, ensure that **Use recommended security, privacy, and compatibility settings** is selected and then click **OK**.
 
-6. In Internet Explorer, navigate to the Azure portal at https://portal.azure.com
+6. In Internet Explorer, navigate to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 7. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-8. Click **+ New** in the upper left corner of the portal, click **Security + Identity**, and then, click **Azure Active Directory**.
+8. Click **+ Create resource** in the upper left corner of the portal, click **Security + Identity**, and then, click **Azure Active Directory**.
 
 9. On the **Active Directory Enterprise** blade, specify the following settings and click **Create**:
 
   - Organization name: **AdatumSync**
 
-  - Initial domain name: a unique, valid name
+  - Initial domain name: _a unique, valid name_
 
   - Country or region: **United States**
 
 10. Wait until the new directory is provisioned.
 
-11. Refresh the Internet Explorer window. Next, click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, click the entry labeled AdatumSync.
+11. Refresh the Internet Explorer window. Next, click the user name in the upper right corner of the Azure portal and, in the **DIRECTORY** section of the drop down menu, click the entry labeled **AdatumSync**.
 
-12. Ensure that **ADATUMSYNC** appears in the upper right corner of the portal underneath your Microsoft account name and, in the hub menu, click **More services**
+12. Ensure that **ADATUMSYNC** appears in the upper right corner of the portal underneath your Microsoft account name and, in the hub menu, click **All services**
 
 13. In the services menu, click **Azure Active Directory**
 
@@ -107,7 +110,7 @@
 
 20. Click **Create**
 
-21. Start an InPrivate Internet Explorer session and browse to the Azure portal at https://portal.azure.com
+21. Start an InPrivate Internet Explorer session and browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com).
 
 22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the SyncAdmin account and the corresponding temporary password. 
 
@@ -125,7 +128,7 @@
   
 1. From the Remote Desktop session to 20533D1001-vm1, start a new Internet Explorer window.
 
-2. Download Azure AD Connect from https://www.microsoft.com/en-us/download/details.aspx?id=47594.
+2. Download Azure AD Connect from [**https://www.microsoft.com/en-us/download/details.aspx?id=47594**](https://www.microsoft.com/en-us/download/details.aspx?id=47594).
 
 3. In the pop-up bar at the bottom of the Internet Explorer window, click **Save**.
 
@@ -145,13 +148,13 @@
 
   - USERNAME: **syncadmin@_domain name_.onmicrosoft.com** where _domain name_ is the unique name you assigned to the new Azure Active Directory tenant in task 2
 
-  - PASSWORD: the password you set in task 2
+  - PASSWORD: _the password you set in task 2_
 
 11. On the **Connect your directories** page, verify that the **adatum.com** forest is selected and click **Add Directory**
 
 12. In the **AD forest account** window, click **Use existing AD account**, specify the following and click **OK**:
 
-  - DOMAIN USERNAME: **ADATUM\\Student** 
+  - DOMAIN\\USERNAME: **ADATUM\\Student** 
 
   - PASSWORD: **Pa55w.rd1234**, click **OK**
 
@@ -168,9 +171,11 @@
 18. On the **Optional feature** page, verify that **Password synchronization** is selected, and then click **Next**.
 
 19. On the **Ready to configure** page, verify that **Start synchronization process as soon as the configuration completes** is selected, and then click **Install**. 
+
 > **Note:** Installation might take 5-10 minutes.
 
 20. On the **Configuration complete** page, click **Exit** to close Azure AD Connect.
+
 > **Note:** You might need to wait a few minutes for the initial synchronization to complete.
 
 21. Switch back to the Azure portal in the Internet Explorer window.
@@ -184,44 +189,63 @@
   
 #### Task 1: Modify attributes of an Active Directory user and Initiate manual synchronization
   
-1. In the Remote Desktop Session to 20533D1001-vm1, in the **Administrator: Windows PowerShell ISE** window, in the console pane, type the following and press **Enter**:
+1. In the Remote Desktop Session to 20533D1001-vm1, in the **Administrator: Windows PowerShell ISE** window, in the console pane, type the following command and press **Enter**:
+
   ```
   $user = Get-ADUser -Filter "SamAccountName -eq 'bbeach'" -Properties Department,Title -SearchBase 'OU=AccountsToSync,DC=adatum,DC=com'
+  ```
+
+2. In the console of the Windows PowerShell ISE window, type the following command and press **Enter**:
+
+  ```
   $user | Get-ADUser -Properties Department,Title
   ```
 
-2. Note the current values of the **Title** and **Department** properties.
+3. Note the current values of the **Title** and **Department** properties.
 
-3. In the console of the Windows PowerShell ISE window, type the following commands and, after each one, press **Enter**:
+4. In the console of the Windows PowerShell ISE window, type the following command and press **Enter**:
+
   ```
   $user | Set-ADUser -Title 'VP' -Department 'Marketing'
+  ```
+
+5. In the console of the Windows PowerShell ISE window, type the following command and press **Enter**:
+
+  ```
   $user | Get-ADUser -Properties Department,Title
   ```
 
-4. Verify that the values of the **Title** and **Department** properties have changed.
+6. Verify that the values of the **Title** and **Department** properties have changed.
 
-5. In the console pane of the Windows PowerShell ISE, type the following command, and then press **Enter**:
+7. In the console pane of the Windows PowerShell ISE, type the following command and press **Enter**:
+
   ```
-  Import-Module "C:\Program Files\Microsoft AZure AD Sync\Bin\ADSync\ADSync.psd1"  
+  Import-Module "C:\Program Files\Microsoft AZure AD Sync\Bin\ADSync\ADSync.psd1"
+  ```
+
+8. In the console pane of the Windows PowerShell ISE, type the following command and press **Enter**:
+
+  ```
   Get-ADSyncScheduler
   ```
 
 > **Note:** **Get-ADSyncScheduler** displays the current configuration settings for synchronization with Azure AD.
 
-6. At the Windows PowerShell command prompt, type the following command, and then press Enter:
+9. At the Windows PowerShell command prompt, type the following command, and then press Enter:
+
   ```
   Start-ADSyncSyncCycle -PolicyType Delta
   ```
 
-7. Wait until synchronization completes before proceeding to the next step.
+10. Wait until synchronization completes before proceeding to the next step.
 
-8. Switch back to the Azure portal in the Internet Explorer window.
+11. Switch back to the Azure portal in the Internet Explorer window.
 
-9. In the Azure portal, on the **AdatumSync** blade, on the **Users and groups - All Users** blade, click **Beverly Beach**
+12. In the Azure portal, on the **AdatumSync** blade, on the **Users and groups - All Users** blade, click **Beverly Beach**
 
-10. In the **Overview** section of the **Beverly beach** blade, verify that the values of the **Department** and **Job title** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
+13. In the **Overview** section of the **Beverly beach** blade, verify that the values of the **Department** and **Job title** entries match the ones you configured for the Active Directory account. If you do not see any changes, wait for a few minutes, and then refresh the page.
 
-11. Close the 20533D1001-vm1 remote desktop session, and click **OK** when prompted.
+14. Close the **20533D1001-vm1** remote desktop session, and click **OK** when prompted.
 
 
 
@@ -232,6 +256,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -244,7 +269,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
