--- a/Instructions/20533D_LAB_AK_11.md
+++ b/Instructions/20533D_LAB_AK_11.md
@@ -7,13 +7,13 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**, and that the **Add-20533DEnvironment** script successfully completed. The script creates two Azure VMs in your subscription and leaves them in the running state. You will use an Azure Automation runbook to stop them.
 
-2. Start Microsoft Edge and browse to https://portal.azure.com. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
+2. Start Microsoft Edge and browse to [**https://portal.azure.com**](https://portal.azure.com). When prompted, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription. 
 
 3. Hover the mouse over the user name entry in the upper right corner of the Azure portal and ensure that you are signed on to the correct subscription. If not, click the user name entry and, in the drop-down menu, click the entry representing the Azure subscription that you chose when running the provisioning script at the beginning of this module. 
 
-4. In the hub menu of the Azure portal, click **More services** and then, in the service menu, click **Virtual machines**. On the **Virtual machines** blade, note **20533D1101-vm0** and **20533D1101-vm1** virtual machines with the running status.
+4. In the hub menu of the Azure portal, click **All services** and then, in the service menu, click **Virtual machines**. On the **Virtual machines** blade, note **20533D1101-vm0** and **20533D1101-vm1** virtual machines with the running status.
 
-5. In the hub menu, click **+ New**, and then click **Monitoring + Management**.
+5. In the hub menu, click **+ Create resource**, and then click **Monitoring + Management**.
 
 6. Click **Automation**.
 
@@ -21,11 +21,11 @@
 
   - Name: **AutomationAccount-20533D11**
 
-  - Subscription: the name of your Azure subscription
+  - Subscription: _the name of your Azure subscription_
 
   - Resource group: ensure that the **Create new** option is selected and type **20533D1102-LabRG** in the text box
 
-  - Location: the same Azure region that you chose when running **Add-20533DEnvironment** script at the beginning of this module or, if not available, another region close to it
+  - Location: _the same Azure region that you chose when running **Add-20533DEnvironment** script at the beginning of this module or, if not available, another region close to it_
 
   - Create Azure Run As account: **Yes**
 
@@ -36,7 +36,7 @@
 
 #### Task 2: Create and review Automation assets
   
-1. In the Azure portal, in the Hub menu, click **More services**, and then click **Automation Accounts**. 
+1. In the Azure portal, in the Hub menu, click **All services**, and then click **Automation Accounts**. 
 
 2. On the Automation Accounts blade, click **AutomationAccount-20533D11**.
 
@@ -147,6 +147,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -159,7 +160,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
