--- a/Instructions/20533D_LAB_AK_03.md
+++ b/Instructions/20533D_LAB_AK_03.md
@@ -7,9 +7,9 @@
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. 
 
-2. Start Microsoft Edge, browse to https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. Start Microsoft Edge, browse to [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. In Microsoft Edge, in the Azure portal, click **New**, click **Compute**, and then click **Windows Server 2016 Datacenter**.
+3. In Microsoft Edge, in the Azure portal, click **+ Create resource**, click **Compute**, and then click **Windows Server 2016 Datacenter**.
 
 4. On the Basics blade, specify the following:
 
@@ -90,6 +90,7 @@
 #### Task 1: Use Azure PowerShell to validate virtual machine deployment
   
 1. In the Windows PowerShell ISE window, at the command prompt, type the following command, and then press Enter:
+
   ```
   Get-AzureRmVM -ResourceGroupName $rgName
   ```
@@ -133,7 +134,7 @@
   
 1. On MIA-CL1, on the taskbar, click the **Visual Studio** icon. If prompted with the message that the evaluation period has ended, click the **Sign in** and provide your Microsoft account credentials. Then, on the **Host your next project in Visual Studio Team Services** page, click the **Not now, maybe later** link. Next, click **Close**. 
 
-2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to E:\\Labfiles\\Lab03\\Starter\\Projects\\ResDevLinuxDeploy.
+2. In Visual Studio, click **File**, click **Open**, click **Project/Solution**, and then browse to **E:\\Labfiles\\Lab03\\Starter\\Projects\\ResDevLinuxDeploy**.
 
 3. In the Open Project dialog box, click **ResDevLinuxDeploy.sln**, and then click **Open**. If prompted, in the Security Warning for ResDevLinuxDeploy dialog box, clear the checkbox **Ask me for every project in this solution** and click **OK**.
 
@@ -197,18 +198,20 @@
 1. On MIA-CL1, right-click the Windows PowerShell icon and then click **Run ISE as Administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. In the Windows PowerShell Integrated Scripting Environment (ISE), in the console pane, type the following cmdlet and then press Enter:
+
   ```
   Add-AzureRmAccount
   ```
 
 3. In the sign-in windows that appears, sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+4. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   Get-AzureRmSubscription
   ```
 
-5. Note the value of the `Id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+5. Note the value of the **`Id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
 
   ```
   Set-AzureRmContext -SubscriptionId 'SubscriptionId'
@@ -290,11 +293,12 @@
 1. On MIA-CL1, click **Start**, in the Start menu, expand the **Windows System** folder, right-click **Command Prompt**, click **More**, and click **Run as administrator**. When prompted by User Account Control for confirmation, click **Yes**.
 
 2. From **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az login
   ```
 
-3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenicate. Start Microsoft Edge and browse to https://aka.ms/devicelogin. 
+3. You will be presented with the message instructing you to open a browser at the page https://aka.ms/devicelogin and provide the code included in the message to authenicate. Start Microsoft Edge and browse to [**https://aka.ms/devicelogin**](https://aka.ms/devicelogin). 
 
 4. On the **Device Login** page, type the code included in the message. This will identify Microsoft Azure Cross-platform Command Line Interface as the application publisher. Click **Continue**. 
 
@@ -302,17 +306,20 @@
 
 6. Note the message stating that you have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device. Close the Microsoft Edge window.
 
-7. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter
+7. If you have multiple subscriptions associated with your Microsoft account, to identify the subscription in which you are going to create a virtual network, type the following command, and then press Enter:
+
   ```
   az account show
   ```
 
-8. Note the value of the `id` property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace `SubscriptionId` with the actual SubscriptionId property of that subscription):
+8. Note the value of the **`id`** property for each subscription in the output of the previous command. To specify the subscription in which you are going to create a virtual network, type the following commands, and then press Enter (replace **`SubscriptionId`** with the actual SubscriptionId property of that subscription):
+
   ```
   az account set --subscription "SubscriptionId"
   ```
 
 9. To deploy an Azure VM based on the same template you used in the previous exercise by using Azure CLI, from **Administrator: Command Prompt**, type the following command and then press Enter:
+
   ```
   az group deployment create --name "WebTierVM2-Deployment" --resource-group "20533D0301-LabRG" --template-file "E:\Labfiles\Lab03\Starter\Templates\azuredeploywebvm.json" --parameters vmName=20533D03LabVM6 virtualNetworkName=20533D0301-LabVNet
   ```
@@ -349,6 +356,7 @@
 2. On the taskbar, right-click the **Windows PowerShell** icon, and then click **Run as Administrator**. In the User Account Control dialog box, click **Yes**.
 
 3. Type the following command, and then press **Enter**:
+
   ```
   Remove-20533DEnvironment
   ```
@@ -361,7 +369,7 @@
 
 7. When prompted for confirmation, type **y**.
 
-8. Start Microsoft Edge, browse to the Azure portal at https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+8. Start Microsoft Edge, browse to the Azure portal at [**https://portal.azure.com**](https://portal.azure.com), and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
 9. In the Azure portal, click **Edit dashboard**.
 
